Translate Button Name
Signed-off-by: ksg97031 <ksg97031@gmail.com>

--- a/pkg/web/templates/index.tmpl
+++ b/pkg/web/templates/index.tmpl
@@ -61,7 +61,7 @@
                 <h2 class="list-inline-item">Monitoring project <text class="text-muted">({{ .total }})</text></h2>
             </li>
             <li class="nav-item col">
-                <button type="button" data-mdb-ripple-centered="true" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">Increase</button>
+                <button type="button" data-mdb-ripple-centered="true" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">Add</button>
             </li>
         </ul>
     </div>
